<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_style_tiled" >

    <include
        android:id="@+id/config_header_view"
        android:layout_width="wrap_content"
        layout="@layout/headerlayout" />

   <LinearLayout
        android:id="@+id/config_topbarRootview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_header_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/min_margin_cutoff"
        android:background="@drawable/custom_table_row"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_ssid_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/ssid_label"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/config_ssid_input"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:maxLength="32"
                android:paddingLeft="5dp"
                android:hint="@string/ssid_label"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_passwd_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/password_hint"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/config_passwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:paddingLeft="5dp"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size" />
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/config_manual_ip_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_topbarRootview"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/min_margin_cutoff"
        android:orientation="vertical" >
          
		<View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/use_manual_ip_label"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="2"
                android:text="@string/use_manual_ip"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />
            
            <CheckBox
                android:id="@+id/config_ip_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff" />
                            
        </LinearLayout>    
          
    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/config_ip_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_manual_ip_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/min_margin_cutoff"
        android:background="@drawable/custom_table_row"
        android:orientation="vertical" >
          
		<View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ip_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/ip_address"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ip_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/config_default_gateway_val"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size" />

        </LinearLayout>        
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/net_mask_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/net_mask"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/net_mask_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/config_default_net_mask_val"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size" />

        </LinearLayout>        
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/default_gateway_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/default_gateway"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gateway_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/config_default_gateway_val"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size" />

        </LinearLayout>        
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dns_server_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/dns_server"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dns_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/config_default_gateway_val"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/rowitem_text_size" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/config_ip_view"
        android:layout_marginLeft="@dimen/max_margin_size"
        android:layout_marginRight="@dimen/max_margin_size" >

        <Button
            android:id="@+id/config_start_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:minHeight="@dimen/header_height"
            android:text="@string/start_label"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/config_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/min_margin_cutoff"
            android:indeterminateDrawable="@drawable/progress_drawable" />
    </RelativeLayout>

</RelativeLayout>